cluster/apps/gitlab/gitlab/gitlab/networkpolicies/egress-gitlab-shared-secrets.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-gitlab-shared-secrets
  namespace: gitlab
spec:
  description: "Policy for egress-gitlab-shared-secrets"
  endpointSelector:
    matchLabels:
      app: gitlab
      release: gitlab
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
