cluster/apps/gitlab/gitlab/gitlab/networkpolicies/egress-gitlab-upgrade-check.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-gitlab-upgrade-check
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: gitlab
      job-name: gitlab-gitlab-upgrade-check
      release: gitlab
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: gitlab-postgres-16
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
