cluster/apps/gitlab/gitlab/gitlab/networkpolicies/gitlab-minio.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-minio
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: minio
      component: app
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: ingress-nginx
            "k8s:io.kubernetes.pod.namespace": ingress-nginx
        - matchLabels:
            app: webservice
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: sidekiq
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: registry
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: toolbox
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: gitlab-backup-mirror
            component: job
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: minio
            component: create-buckets
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: migrations
            "k8s:io.kubernetes.pod.namespace": gitlab
        # cnpg: migration
        # - matchLabels:
        #     cnpg.io/jobRole: import
        #     "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
