cluster/apps/gitlab/gitlab/gitlab/networkpolicies/gitlab-redis.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-redis
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: gitlab
      app.kubernetes.io/name: redis
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: sidekiq
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: toolbox
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: migrations
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
