cluster/apps/gitlab/gitlab/gitlab/networkpolicies/gitlab-shell.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-shell
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: gitlab-shell
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            app.kubernetes.io/instance: envoy-gateway
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "10022"
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: webservice
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: gitaly
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8075"
              protocol: TCP
