cluster/apps/gitlab/gitlab/gitlab/networkpolicies/gitlab-sidekiq.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-sidekiq
  namespace: gitlab
spec:
  description: "Policy for gitlab-sidekiq"
  endpointSelector:
    matchLabels:
      app: sidekiq
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            cnpg.io/cluster: gitlab-postgres
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "34358"
              protocol: TCP
            - port: "43720"
              protocol: TCP
            - port: "56404"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: gitlab-garage
            app.kubernetes.io/name: garage
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "3900"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: registry
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: gitlab-postgres
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: valkey
            app.kubernetes.io/instance: gitlab-valkey
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: gitaly
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8075"
              protocol: TCP
    - toFQDNs:
        - matchName: hooks.slack.com
        - matchName: version.gitlab.com
        - matchName: cdn.web-ide.gitlab-static.net
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toFQDNs:
        - matchName: ${SMTP_DOMAIN}
      toPorts:
        - ports:
            - port: "587"
              protocol: TCP
