cluster/apps/gitlab/gitlab/gitlab/networkpolicies/gitlab-webservice.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gitlab-webservice
  namespace: gitlab
spec:
  endpointSelector:
    matchLabels:
      app: webservice
      release: gitlab
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-external
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
            - port: "8181"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            job: cleanup-gitlab-runner
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: gitaly
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8075"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app: gitlab-shell
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
        - matchLabels:
            app: gitaly
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8181"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: envoy-gateway
            app.kubernetes.io/component: controller
            app.kubernetes.io/instance: envoy-gateway
            "k8s:io.kubernetes.pod.namespace": network
      toPorts:
        - ports:
            - port: "443" # OIDC
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: minio
            component: app
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            cnpg.io/cluster: gitlab-postgres-16
            cnpg.io/podRole: instance
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: gitlab
            app.kubernetes.io/name: redis
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: gitaly
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "8075"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app: registry
            release: gitlab
            "k8s:io.kubernetes.pod.namespace": gitlab
      toPorts:
        - ports:
            - port: "5000"
              protocol: TCP
